--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "uvcanvas": "^0.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
